Fix uploads path & image URL for Render